--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- Criado por Leonel Miguins -->
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
@@ -11,22 +12,22 @@
   <header>
     <h2>LinkUtil</h2>
     <div class="menu">
-      <button id="btnIa">IAs</button>
-      <button id="btnTorrent">Torrent</button>
-      <button id="btnUtil">Util</button>
+      <button id="btnIas">Ias</button>
+      <button id="btnDownloads">Downloads</button>
+      <button id="btnUtil">Utilitarios</button>
       <button id="btnEntret">Entretenimento</button>
-      <a href="https://github.com/LeonelMiguins/linkutil/" target="_blank" style="display: flex; align-items: center; margin-left: 10px;">
+      <button id="btnAudio">Audio</button>
+      <a href="https://github.com/LeonelMiguins/linkutil-chrome-extension" target="_blank" style="display: flex; align-items: center; margin-left: 10px;">
       <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub" style="width: 24px; height: 24px;">
       </a>
     </div>
   </header>
   <div class="container">
     <ul class="tool-list" id="tool-list">
-      <!-- Conteúdo será carregado via JS -->
+      <!-- Conteúdo será carregado via JS aqui -->
     </ul>
   </div>
 
-  <!-- Linkando o JS externo (isso resolve o problema do inline!) -->
   <script src="js/script.js"></script>
 </body>
 </html>
